--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,25 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <header>
-      <include src="./partials/header.html"></include>
-    </header>
-    <main>
-      <include src="./partials/hero.html"></include>
-      <include src="./partials/products.html"></include>
-      <include src="./partials/about.html"></include>
-      <include src="./partials/advantages.html"></include>
-      <include src="./partials/gallery.html"></include>
-      <include src="./partials/reviews.html"></include>
-      <include src="./partials/contacts.html"></include>
-    </main>
-    <footer>
-      <include src="./partials/footer.html"></include>
-    </footer>
+    <div class="container">
+      <div class="thumb">
+        <img src="./images/background/background-mobile.jpg" alt="" />
+      </div>
+      <header>
+        <include src="./partials/header.html"></include>
+      </header>
+      <main>
+        <include src="./partials/hero.html"></include>
+        <include src="./partials/products.html"></include>
+        <include src="./partials/about.html"></include>
+        <include src="./partials/advantages.html"></include>
+        <include src="./partials/gallery.html"></include>
+        <include src="./partials/reviews.html"></include>
+        <include src="./partials/contacts.html"></include>
+      </main>
+      <footer>
+        <include src="./partials/footer.html"></include>
+      </footer>
+    </div>
   </body>
 </html>
