--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <header>
+    <header class="header">
       <include src="./partials/header.html"></include>
     </header>
     <main>
