--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       <include src="./partials/reviews.html"></include>
       <include src="./partials/contacts.html"></include>
     </main>
+    <include src="./partials/mobile-menu.html"></include>
     <footer>
       <include src="./partials/footer.html"></include>
     </footer>
