--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     <footer>
       <include src="./partials/footer.html"></include>
     </footer>
+    <include src="./partials/modal.html"></include>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
