--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,8 @@
     <footer>
       <include src="./partials/footer.html"></include>
     </footer>
-    <include src="./partials/modal.html"></include>
+    <include src="./partials/modal-buy-now.html"></include>
+    <include src="./partials/modal-ingredients.html"></include>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
