--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,18 @@
     </footer>
     <include src="./partials/modal-buy-now.html"></include>
     <include src="./partials/modal-ingredients.html"></include>
-    <script
+    <include src="./partials/modal-how-its-made.html"></include>
+    <include src="./partials/modal-location.html"></include>
+    <include src="./partials/modal-franchise.html"></include>
+    <!-- <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous"
     ></script>
-    <script defer src="./js/mobile-menu.js"></script>
+    <script defer src="./js/mobile-menu.js"></script> -->
+
+    <!-- Javascript -->
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
