--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     <footer>
       <include src="./partials/footer.html"></include>
     </footer>
+    <include src="./partials/backdrop.html"></include>
     <include src="./partials/modal-buy-now.html"></include>
     <include src="./partials/modal-ingredients.html"></include>
     <include src="./partials/modal-how-its-made.html"></include>
