--- a/src/index.html
+++ b/src/index.html
@@ -43,14 +43,7 @@
     <include src="./partials/modal-how-its-made.html"></include>
     <include src="./partials/modal-location.html"></include>
     <include src="./partials/modal-franchise.html"></include>
-    <!-- <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="./js/mobile-menu.js"></script> -->
-
+    <include src="./partials/scroll-to-top-button.html"></include>
     <!-- Javascript -->
     <script type="module" src="./index.js"></script>
     <!-- Swiper -->
