--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,7 +28,6 @@
       sizes="32x32"
       href="./images/favicon/favicon-32.png"
     />
-    <!-- <link rel="manifest" href="/site.webmanifest" /> -->
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -43,7 +42,6 @@
     />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./sass/index.scss" />
-    <!-- <script type="module" src="./index.js"></script> -->
   </head>
   <body>
     <header class="header">
@@ -62,6 +60,7 @@
     <footer>
       <include src="./partials/footer.html"></include>
     </footer>
+    <!-- Modals -->
     <include src="./partials/backdrop.html"></include>
     <include src="./partials/modal-buy-now.html"></include>
     <include src="./partials/modal-ingredients.html"></include>
